[7.x] Beautify ML Routes (#70246)